# rtic-mickey-mouse

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: schematic.drawio  usage.kra
src/: config.rs  descriptor.rs  keyboard.rs  main.rs  mode.rs  mouse.rs  remote.rs
