[package]
name = "rtic-mickey-mouse"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
rtic-monotonics = { version = "2.0.1", features = ["cortex-m-systick", "stm32_tim2", "stm32f401cc"]}
panic-rtt-target = { version = "0.1.3" }
rtt-target = { version = "0.5.0" }
usb-device = "0.3.0"
usbd-serial = "0.2.0"
usbd-hid = "0.7.0"
rtic-sync = "1.3.0"
usbd-hid-macros = "0.6.0"
int-enum = "1.1.2"
fugit = "0.3.7"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401", "usb_fs"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 0
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 0
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
